chore(updates): update maven versions, add default test on asciidoc file